--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
     <li><a href="">Contacts</a></li>
 </ul>
         </nav>
-<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+            </ul>
+                    </address>
     </header>
     <main>
         <section>
             <h2>Order</h2>
             <h1>Effective Solutions for Your Business</h1>
-                <button type="button">Order Service</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
             <h2>Advantages</h2>
@@ -50,22 +54,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/mark.jpg" alt="Mark" width="350" />
+                    <img src="./images/mark.jpg" alt="Mark" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/tom.jpg" alt="Tom" width="350" />
+                    <img src="./images/tom.jpg" alt="Tom" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/camila.jpg" alt="Camila" width="350" />
+                    <img src="./images/camila.jpg" alt="Camila" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/daniel.jpg" alt="Daniel" width="350" />
+                    <img src="./images/daniel.jpg" alt="Daniel" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
